# streamlit_experiments

./: pyproject.toml  requirements.txt  table.py  total_dai.py
.streamlit/: config.toml
